[gd_scene load_steps=9 format=3 uid="uid://dhdew4mlkjxct"]

[ext_resource type="PackedScene" uid="uid://bd6vv0g2vw6ie" path="res://Scenes/interior_character.tscn" id="1_6ih0u"]
[ext_resource type="Script" path="res://src/ship_interior.gd" id="1_x326t"]
[ext_resource type="Texture2D" uid="uid://chuxop4f4062p" path="res://Resources/Art/Hero Ship_sprites/HeroShip_interior.png" id="2_4yudv"]
[ext_resource type="Script" path="res://src/interior_border.gd" id="3_8rish"]
[ext_resource type="PackedScene" uid="uid://dbtoh2vrw0ta1" path="res://Scenes/interactable.tscn" id="4_wpjgs"]
[ext_resource type="Texture2D" uid="uid://dqeo6hnw40h7v" path="res://Resources/Art/HeroShip_interior/Weapon Station.png" id="6_bjvpg"]

[sub_resource type="ImageTexture" id="ImageTexture_ns6fb"]

[sub_resource type="ImageTexture" id="ImageTexture_un1lh"]

[node name="ShipInterior" type="Node2D"]
script = ExtResource("1_x326t")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_4yudv")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 256
collision_mask = 256

[node name="Border" type="Line2D" parent="StaticBody2D"]
visible = false
position = Vector2(-5, -5)
points = PackedVector2Array(134, -371, 250.718, -240.682, 246, 111, 213, 92, -186, 91, -250, 107, -254, -213, -119.497, -373.122, 119, -374)
script = ExtResource("3_8rish")

[node name="InteriorCharacter" parent="." groups=["player"] instance=ExtResource("1_6ih0u")]
position = Vector2(1, -180)
scale = Vector2(0.5, 0.5)
motion_mode = 1

[node name="Camera2D" type="Camera2D" parent="InteriorCharacter"]

[node name="WeaponsLocker" parent="." instance=ExtResource("4_wpjgs")]
position = Vector2(-199, -47)
rotation = -1.5799
texture = ExtResource("6_bjvpg")
action_name = "Weapons Locker"
threshhold_distance = 20.0
description = "Arms Locker

Swap Weapons"

[node name="Combat" parent="." instance=ExtResource("4_wpjgs")]
position = Vector2(0, -103)
texture = SubResource("ImageTexture_ns6fb")
threshhold_distance = 10.0
description = "Grow

Arm the Ship"

[node name="Pilot" parent="." instance=ExtResource("4_wpjgs")]
position = Vector2(-2, -330)
texture = SubResource("ImageTexture_un1lh")
threshhold_distance = 30.0
description = "Helm

Fly the Ship"

[connection signal="interacted" from="WeaponsLocker" to="." method="_on_interaction"]
[connection signal="interacted" from="WeaponsLocker" to="." method="_on_weapons_locker_interacted"]
[connection signal="interacted" from="Combat" to="." method="_on_combat_interacted"]
[connection signal="interacted" from="Pilot" to="." method="_on_pilot_interacted"]
